--- a/about/index.html
+++ b/about/index.html
@@ -12,12 +12,12 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="manifest" href="../site.webmanifest">
+  <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -29,15 +29,15 @@
     <div>
       <a href="#">
         <!--header image-->
-        <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        <img src="../img/unpluggedlogo.png" alt="unplugged logo">
         <div>
         </div>
 
         <!--header navigation-->
         <nav>
           <ul>
-            <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
-            <li><a href="about/index.html" target="_blank" rel="noopener">About</a></li>
+            <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
+            <li><a href="../about/index.html" target="_blank" rel="noopener">About</a></li>
           </ul>
         </nav>
       </a>
@@ -47,18 +47,8 @@
   <!--main-->
   <main>
 
-    <section>
-      <!--main hero image-->
-      <img src="img/unplugged-retreat.jpg" alt="unplugged retreat">
-      <h1>Retreat from the desk, returned refreshed.</h1>
-    </section>
-    <aside>
-      <h3>Want to join the next retreat?</h3>
-      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-      <h3>Find out more</h3>
-      <input type="text" name="name" value="email address">
-      <input type="button" value="Download Itinerary">
-    </aside>
+    <section></section>
+    <aside></aside>
 
   </main>
 
@@ -82,13 +72,13 @@
         <div .social>
           <h4>Social</h4>
           <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="img/facebook.png" alt="facebook icon">
+            <img src="../img/facebook.png" alt="facebook icon">
           </a>
           <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="img/instagram.png" alt="facebook icon">
+            <img src="../img/instagram.png" alt="facebook icon">
           </a>
           <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="img/twitter.png" alt="facebook icon">
+            <img src="../img/twitter.png" alt="facebook icon">
           </a>
         </div>
 
@@ -99,15 +89,13 @@
         copyright 2023 | Unplugged
       </div>
     </div>
-
-    <!--footer-->
   </footer>
 
   <!-- Add your site or application content here -->
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="../js/plugins.js"></script>
+  <script src="../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
