--- a/about/index.html
+++ b/about/index.html
@@ -25,14 +25,17 @@
 <body>
 
   <!--header-->
-  <header>
-    <div>
-      <a href="#">
-        <!--header image-->
-        <img src="../img/unpluggedlogo.png" alt="unplugged logo">
-        <div>
-        </div>
+  <header> 
 
+    <div class="content-wrapper"> <!--beginning of the header content-wrapper-->
+
+       <!--header image-->
+      <a href="#">
+        <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+      </a>
+
+      <!--header-divider-->
+      <div class="header-divider">
         <!--header navigation-->
         <nav>
           <ul>
@@ -40,8 +43,10 @@
             <li><a href="../about/index.html" target="_blank" rel="noopener">About</a></li>
           </ul>
         </nav>
-      </a>
-    </div>
+      </div>
+      
+    </div> <!--end of the header content-wrapper-->
+
   </header>
 
   <!--main-->
@@ -54,9 +59,11 @@
 
   <!--footer-->
   <footer>
-    <div .content-wrapper>
 
-      <div .footer-contact>
+    <div class="content-wrapper"> <!--beginning of the footer content-wrapper-->
+
+      <div class="footer-contact"> <!--beginning of the footer content-wrapper-->
+
         <!--footer contact info-->
         <div .contact>
           <h4>Contact</h4>
@@ -82,13 +89,15 @@
           </a>
         </div>
 
-      </div>
+      </div> <!--end of the footer content-wrapper-->
 
       <!--copyright-->
-      <div .copyright>
+      <div class="copyright">
         copyright 2023 | Unplugged
       </div>
+
     </div>
+
   </footer>
 
   <!-- Add your site or application content here -->
