--- a/faq/index.html
+++ b/faq/index.html
@@ -25,13 +25,14 @@
 <body>
 
   <!--header-->
-  <header>
-    <div>
+  <header> 
+
+    <div class="content-wrapper"> <!--beginning of the header content-wrapper-->
+
+       <!--header image-->
       <a href="#">
-        <!--header image-->
         <img src="../img/unpluggedlogo.png" alt="unplugged logo">
-        <div>
-        </div>
+      </a>
 
         <!--header navigation-->
         <nav>
@@ -40,8 +41,10 @@
             <li><a href="../about/index.html" target="_blank" rel="noopener">About</a></li>
           </ul>
         </nav>
-      </a>
-    </div>
+     
+    </div> <!--end of the header content-wrapper-->
+
+
   </header>
 
   <!--main-->
@@ -55,11 +58,12 @@
 
   <!--footer-->
   <footer>
-    <div .content-wrapper>
+    <div class="content-wrapper"> <!--beginning of the footer content-wrapper-->
 
-      <div .footer-contact>
+      <div class="footer-contact"><!--beginning of the footer content-wrapper-->
+
         <!--footer contact info-->
-        <div .contact>
+        <div class="contact">
           <h4>Contact</h4>
           <address>
             <p>
@@ -70,7 +74,7 @@
         </div>
 
         <!--footer social media-->
-        <div .social>
+        <div class="social">
           <h4>Social</h4>
           <a href="https://facebook.com" target="_blank" rel="noopener">
             <img src="../img/facebook.png" alt="facebook icon">
@@ -83,13 +87,15 @@
           </a>
         </div>
 
-      </div>
+      </div> <!--end of the footer content-wrapper-->
 
       <!--copyright-->
-      <div .copyright>
+      <div class="copyright">
         copyright 2023 | Unplugged
       </div>
+
     </div>
+
   </footer>
 
   <!-- Add your site or application content here -->
