Finished homepage html

--- a/about/index.html
+++ b/about/index.html
@@ -25,26 +25,26 @@
 <body>
 
   <!--header-->
-  <header> 
+  <header>
 
     <div class="content-wrapper"> <!--beginning of the header content-wrapper-->
 
-       <!--header image-->
+      <!--header image-->
       <a href="#">
         <img src="../img/unpluggedlogo.png" alt="unplugged logo">
       </a>
 
       <!--header-divider-->
-      <div class="header-divider">
-        <!--header navigation-->
-        <nav>
-          <ul>
-            <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
-            <li><a href="../about/index.html" target="_blank" rel="noopener">About</a></li>
-          </ul>
-        </nav>
-      </div>
-      
+      <div class="header-divider"></div>
+
+      <!--header navigation-->
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank" rel="noopener">About</a></li>
+        </ul>
+      </nav>
+
     </div> <!--end of the header content-wrapper-->
 
   </header>
@@ -65,8 +65,10 @@
       <div class="footer-contact"> <!--beginning of the footer content-wrapper-->
 
         <!--footer contact info-->
-        <div .contact>
-          <h4>Contact</h4>
+        <div class="contact">
+          <h4>
+            Contac
+          </h4>
           <address>
             <p>
               555-555-5555<br>
@@ -76,26 +78,34 @@
         </div>
 
         <!--footer social media-->
-        <div .social>
-          <h4>Social</h4>
-          <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="../img/facebook.png" alt="facebook icon">
-          </a>
-          <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="../img/instagram.png" alt="facebook icon">
-          </a>
-          <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="../img/twitter.png" alt="facebook icon">
-          </a>
+        <div class="social">
+
+          <h4>
+            Social
+          </h4>
+
+          <!--social icons-->
+          <div class="social-icons">
+            <a href="https://www.facebook.com" target="_blank" rel="noopener">
+              <img src="../img/facebook.png" alt="facebook icon">
+            </a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener">
+              <img src="../img/instagram.png" alt="facebook icon">
+            </a>
+            <a href="https://www.twitter.com" target="_blank" rel="noopener">
+              <img src="../img/twitter.png" alt="facebook icon">
+            </a>
+          </div>
+
         </div>
 
-      </div> <!--end of the footer content-wrapper-->
+      </div> <!--end of the footer contact-->
 
-      <!--copyright-->
-      <div class="copyright">
-        copyright 2023 | Unplugged
-      </div>
+    </div> <!--end of the footer content-wrapper-->
 
+    <!--copyright-->
+    <div class="copyright">
+      copyright 2023 | Unplugged
     </div>
 
   </footer>
