--- a/faq/index.html
+++ b/faq/index.html
@@ -25,25 +25,27 @@
 <body>
 
   <!--header-->
-  <header> 
+  <header>
 
     <div class="content-wrapper"> <!--beginning of the header content-wrapper-->
 
-       <!--header image-->
+      <!--header image-->
       <a href="#">
         <img src="../img/unpluggedlogo.png" alt="unplugged logo">
       </a>
 
-        <!--header navigation-->
-        <nav>
-          <ul>
-            <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
-            <li><a href="../about/index.html" target="_blank" rel="noopener">About</a></li>
-          </ul>
-        </nav>
-     
-    </div> <!--end of the header content-wrapper-->
+      <!--header-divider-->
+      <div class="header-divider"></div>
 
+      <!--header navigation-->
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank" rel="noopener">About</a></li>
+        </ul>
+      </nav>
+
+    </div> <!--end of the header content-wrapper-->
 
   </header>
 
@@ -64,7 +66,9 @@
 
         <!--footer contact info-->
         <div class="contact">
-          <h4>Contact</h4>
+          <h4>
+            Contact
+          </h4>
           <address>
             <p>
               555-555-5555<br>
@@ -75,26 +79,34 @@
 
         <!--footer social media-->
         <div class="social">
-          <h4>Social</h4>
-          <a href="https://facebook.com" target="_blank" rel="noopener">
-            <img src="../img/facebook.png" alt="facebook icon">
-          </a>
-          <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="../img/instagram.png" alt="facebook icon">
-          </a>
-          <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="../img/twitter.png" alt="facebook icon">
-          </a>
+
+          <h4>
+            Social
+          </h4>
+
+          <!--social icons-->
+          <div class="social-icons">
+            <a href="https://facebook.com" target="_blank" rel="noopener">
+              <img src="../img/facebook.png" alt="facebook icon">
+            </a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener">
+              <img src="../img/instagram.png" alt="facebook icon">
+            </a>
+            <a href="https://www.twitter.com" target="_blank" rel="noopener">
+              <img src="../img/twitter.png" alt="facebook icon">
+            </a>
+          </div>
+
         </div>
 
-      </div> <!--end of the footer content-wrapper-->
+      </div> <!--end of the footer contact-->
+
+    </div> <!--end of the footer content-wrapper-->
 
       <!--copyright-->
       <div class="copyright">
         copyright 2023 | Unplugged
       </div>
-
-    </div>
 
   </footer>
 
