--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
 
     <div class="content-wrapper"> <!--beginning of the header content-wrapper-->
 
-       <!--header image-->
+      <!--header image-->
       <a href="#">
         <img src="img/unpluggedlogo.png" alt="unplugged logo">
       </a>
 
       <!--header-divider-->
-      <div class="header-divider">
-        <!--header navigation-->
-        <nav>
-          <ul>
-            <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
-            <li><a href="about/index.html" target="_blank" rel="noopener">About</a></li>
-          </ul>
-        </nav>
-      </div>
+      <div class="header-divider"></div>
+
+      <!--header navigation-->
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank" rel="noopener">About</a></li>
+        </ul>
+      </nav>
 
     </div> <!--end of the header content-wrapper-->
 
@@ -49,17 +49,20 @@
   <!--main-->
   <main>
 
-    <section class="hero-area"> <!-- beginning of the hero area-->
+    <!--hero area-->
+    <section class="hero-area">
 
       <div content-wrapper> <!--beginning of the hero-area content-wrapper-->
 
         <!--main hero image-->
-        <img src="img/unplugged-retreat.jpg" alt="unplugged retreat">
-        <h1>Retreat from the desk, returned refreshed.</h1>
+        <img src="img/unplugged-retreat.jpg" alt="unplugged retreat" width="1000PX" height="500px">
+        <h1>
+          Retreat from the desk, returned refreshed.
+        </h1>
 
       </div> <!--end of the hero-area content-wrapper-->
 
-    </section> <!--end of the hero area-->
+    </section>
 
     <aside> <!--beginning of the aside section-->
 
@@ -67,8 +70,12 @@
 
         <!--form-description-->
         <div class="form-description">
-          <h3>Want to join the next retreat?</h3>
-          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+          <h3>
+            Want to join the next retreat?
+          </h3>
+          <p>
+            Find out when we are holding our next retreat and how your company or team can sign up!
+          </p>
         </div>
 
         <!--form-->
@@ -78,22 +85,120 @@
           <input type="button" value="Download Itinerary">
         </div>
 
-      </div> <!--end of the aside content-wrapper-->
+      </div>
 
     </aside> <!--end of the aside section-->
+
+    <!--features-->
+    <section class="features">
+
+      <div class="content-wrapper"> <!--beggining fo the features content-wrapper-->
+
+        <h2>
+          Have the work week you always dreamed about of - without the bad wifi.
+        </h2>
+
+        <!--features-items-->
+        <div class="features-items">
+
+          <!--article section incl. icon and description-->
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-items-description">
+              Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+            </p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-items-description">
+              12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
+            </p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-items-description">
+              Private chef team providing on demand meals - just like you team kitchen.
+            </p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-items-description">
+              5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.
+            </p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-items-description">
+              Retreat facilitator to manage your day to day activities so you all get a chance to reset.
+            </p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-items-description">
+              Dedicated compter room for times that you must wifi.
+            </p>
+          </article>
+
+        </div>
+
+      </div> <!--end of the features content-wrapper-->
+
+    </section>
+
+    <!--reviews-->
+    <section class="reviews">
+
+      <div class="content-wrapper"> <!--beginning of reviews content-wrapper-->
+
+        <h2>
+          Be a better team in 5 days, like this one.
+        </h2>
+        <img src="img/unplugged-retreat-lacrue.jpg" alt="Lecrue Bottling Co." width="1000px"> <!--reviews image-->
+
+        <!--reviews section article-->
+        <article>
+          <div>
+            <h3>
+              LaCrue Bottling Co.<br>
+              October 2018
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus luctus augue neque, quis posuere diam
+              posuere nec. Ut maximus nulla nec sagittis semper. Vestibulum molestie orci et rhoncus rhoncus.
+              Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+            </p>
+          </div>
+        </article>
+
+      </div><!--end of reviews content-wrapper-->
+
+    </section>
 
   </main>
 
   <!--footer-->
   <footer>
 
-    <div .content-wrapper> <!--beginning of the footer content-wrapper-->
+    <div class="content-wrapper"> <!--beginning of the footer content-wrapper-->
 
       <div class="footer-content"> <!--beginning of the footer content-->
 
         <!--footer contact info-->
         <div class="contact">
-          <h4>Contact</h4>
+          <h4>
+            Contact
+          </h4>
           <address>
             <p>
               555-555-5555<br>
@@ -104,26 +209,34 @@
 
         <!--footer social media-->
         <div class="social">
-          <h4>Social</h4>
-          <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="img/facebook.png" alt="facebook icon">
-          </a>
-          <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="img/instagram.png" alt="facebook icon">
-          </a>
-          <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="img/twitter.png" alt="facebook icon">
-          </a>
+
+          <h4>
+            Social
+          </h4>
+
+          <!--social icons-->
+          <div class="social-icons">
+            <a href="https://www.facebook.com" target="_blank" rel="noopener">
+              <img src="img/facebook.png" alt="facebook icon">
+            </a>
+            <a href="https://www.twitter.com" target="_blank" rel="noopener">
+              <img src="img/twitter.png" alt="facebook icon">
+            </a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener">
+              <img src="img/instagram.png" alt="facebook icon">
+            </a>
+          </div>
+
         </div>
 
-      </div> <!--end of the footer-content-->
-
-      <!--copyright-->
-      <div class="copyright">
-        copyright 2023 | Unplugged
-      </div>
+      </div> <!--end of the footer-contact-->
 
     </div> <!--end of the footer content-wrapper-->
+
+    <!--copyright-->
+    <div class="copyright">
+        copyright 2023 | Unplugged
+    </div>
 
     <!--footer-->
   </footer>
