About page completed

--- a/about/index.html
+++ b/about/index.html
@@ -52,8 +52,81 @@
   <!--main-->
   <main>
 
-    <section></section>
-    <aside></aside>
+    <!--mission-->
+    <section class="mission">
+
+      <div class="content-wrapper"> <!--beginning of the header content-wrapper-->
+
+        <h2>
+          Our Mission - we want to make you the team you always wanted to be.
+        </h2>
+
+        <!--mission-content-->
+        <div class="mission-content">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed congue ligula vitae mauris hendrerit, id
+            pretium metus tincidunt. Nunc facilisis placerat condimentum. Proin suscipit neque varius massa consectetur,
+            at auctor tellus placerat. Mauris sagittis mauris a tincidunt ullamcorper. Aliquam erat volutpat. Nunc
+            pretium neque sed lacus placerat mollis.
+          </p>
+          <p>
+            Duis vel urna ac est vestibulum vulputate. Suspendisse eu est rutrum, dapibus augue vel, blandit lectus.
+            Quisque felis mauris, aliquet in turpis non, mollis vestibulum ipsum. Morbi id aliquam sem. Pellentesque eu
+            urna a nibh tincidunt mattis. Nam id accumsan ex. Praesent vel diam turpis. Phasellus ac ex nibh. Donec sed
+            posuere tellus. Nam condimentum laoreet leo, a ultrices est condimentum in.
+          </p>
+        </div>
+      </div> <!--end of the header content-wrapper-->
+    </section>
+
+    <!--map-->
+    <section class="map">
+      <figure>
+      </figure>
+    </section>
+
+    <!--contact-section-->
+    <section class="contact-section">
+      <div class="content-wrapper"> <!--beginning of the contact-info content-wrapper-->
+        <h2>
+          Contact us, because you all need this.
+        </h2>
+        <div class="contact-content">
+
+          <!--general information-->
+          <div>
+            <h4>
+              General Information
+            </h4>
+
+            <address>
+              <p>
+                333 Main St., Lake Geneva, WI 53147<br>
+                555-555-5555<br>
+                hello@unplugged.com
+              </p>
+            </address>
+          </div>
+
+          <!--facilitator information-->
+          <div>
+            <h4>
+              chat with a facilitator
+            </h4>
+
+            <address>
+              <p>
+                555-555-5556<br>
+                facilitator@unplugged.com
+              </p>
+            </address>
+          </div>
+
+        </div> <!--end of the contact- content-wrapper-->
+
+      </div>
+
+    </section>
 
   </main>
 
@@ -67,7 +140,7 @@
         <!--footer contact info-->
         <div class="contact">
           <h4>
-            Contac
+            Contact
           </h4>
           <address>
             <p>
@@ -105,7 +178,7 @@
 
     <!--copyright-->
     <div class="copyright">
-      copyright 2023 | Unplugged
+      Copyright 2023 | Unplugged
     </div>
 
   </footer>
