--- a/faq/index.html
+++ b/faq/index.html
@@ -105,7 +105,7 @@
 
       <!--copyright-->
       <div class="copyright">
-        copyright 2023 | Unplugged
+        Copyright 2023 | Unplugged
       </div>
 
   </footer>
