--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
     <!--copyright-->
     <div class="copyright">
-        copyright 2023 | Unplugged
+        Copyright 2023 | Unplugged
     </div>
 
     <!--footer-->
