Finished faq page html

--- a/faq/index.html
+++ b/faq/index.html
@@ -50,11 +50,42 @@
   </header>
 
   <!--main-->
-  <main>
+  <main class="faq">
 
-    <section>
-    </section>
-    <aside></aside>
+    <div class="content-wrapper"><!--beginning of the main content-wrapper-->
+
+      <h2>Frequently Asked Questions</h2>
+
+      <!--FAQ questions-->
+      <div class="faq-content">
+        <h4>How do I get to the Unplugged regreat?</h4>
+        <p>
+          Aliquam tempor sapien nec consectetur congue. Sed auctor ullamcorper purus non mattis. Praesent magna massa,
+          convallis imperdiet nibh sit amet, venenatis rutrum mauris. Etiam a enim erat.
+        </p>
+      </div>
+
+      <div class="faq-content">
+        <h4>What kind of team is right for the unplugged retreat?</h4>
+        <p>
+          Nunc metus libero, rutrum in vehicula id, malesuada a velit. Pellentesque bibendum lacinia ipsum. Etiam
+          fermentum, leo vitae dictum viverra, sapien mi dictum quam, tincidunt lacinia elit nibh ut nunc.
+        </p>
+      </div>
+
+      <div class="faq-content">
+        <h4>What size teams can you accomodate?</h4>
+        <p>Pellentesque pellentesque odio consectetur orci mattis finibus. In tortor dui, interdum in aliquet at,
+          scelerisque in justo. Donec ex elit, malesuada at laoreet in, bibendum vel massa.</p>
+      </div>
+
+      <div class="faq-content">
+        <h4>Is there really no wife available?</h4>
+        <p>Proin tortor arcu, euismod a auctor ut, molestie vitae nisi. Aenean ultricies, risus vitae ornare ultricies,
+          enimipsum finibus tellus, id tristique lorem lorem non nulla. Pellentesque vitae ipsum dolor. </p>
+      </div>
+
+    </div><!--end of the main content-wrapper-->
 
   </main>
 
@@ -103,10 +134,10 @@
 
     </div> <!--end of the footer content-wrapper-->
 
-      <!--copyright-->
-      <div class="copyright">
-        Copyright 2023 | Unplugged
-      </div>
+    <!--copyright-->
+    <div class="copyright">
+      Copyright 2023 | Unplugged
+    </div>
 
   </footer>
 
