--- a/index.html
+++ b/index.html
@@ -37,14 +37,21 @@
       <!--header navigation-->
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank" rel="noopener">About</a></li>
+          <li>
+            <a href="faq/index.html" target="_blank" rel="noopener">FAQ
+            </a>
+          </li>
+          <li>
+            <a href="about/index.html" target="_blank" rel="noopener">About
+            </a>
+          </li>
         </ul>
       </nav>
 
     </div> <!--end of the header content-wrapper-->
 
   </header>
+  <!--header ends-->
 
   <!--main-->
   <main>
@@ -52,10 +59,9 @@
     <!--hero area-->
     <section class="hero-area">
 
-      <div content-wrapper> <!--beginning of the hero-area content-wrapper-->
+      <div class="content-wrapper"> <!--beginning of the hero-area content-wrapper-->
 
-        <!--main hero image-->
-        <img src="img/unplugged-retreat.jpg" alt="unplugged retreat" width="1000PX" height="500px">
+
         <h1>
           Retreat from the desk, returned refreshed.
         </h1>
@@ -164,7 +170,8 @@
         <h2>
           Be a better team in 5 days, like this one.
         </h2>
-        <img src="img/unplugged-retreat-lacrue.jpg" alt="Lecrue Bottling Co." width="1000px"> <!--reviews image-->
+
+        <!--reviews image-->
 
         <!--reviews section article-->
         <article>
@@ -173,6 +180,7 @@
               LaCrue Bottling Co.<br>
               October 2018
             </h3>
+
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus luctus augue neque, quis posuere diam
               posuere nec. Ut maximus nulla nec sagittis semper. Vestibulum molestie orci et rhoncus rhoncus.
@@ -186,6 +194,7 @@
     </section>
 
   </main>
+  <!--main ends-->
 
   <!--footer-->
   <footer>
@@ -216,30 +225,38 @@
 
           <!--social icons-->
           <div class="social-icons">
-            <a href="https://www.facebook.com" target="_blank" rel="noopener">
-              <img src="img/facebook.png" alt="facebook icon">
-            </a>
-            <a href="https://www.twitter.com" target="_blank" rel="noopener">
-              <img src="img/twitter.png" alt="facebook icon">
-            </a>
-            <a href="https://www.instagram.com" target="_blank" rel="noopener">
-              <img src="img/instagram.png" alt="facebook icon">
-            </a>
+
+            <p>
+              <a href="https://www.facebook.com" target="_blank" rel="noopener">
+              </a>
+            </p>
+
+            <p>
+              <a href="https://www.twitter.com" target="_blank" rel="noopener">
+              </a>
+            </p>
+
+            <p>
+              <a href="https://www.instagram.com" target="_blank" rel="noopener">
+              </a>
+            </p>
+
           </div>
 
         </div>
 
-      </div> <!--end of the footer-contact-->
+      </div> <!--end of the footer-content-->
 
-    </div> <!--end of the footer content-wrapper-->
+    </div><!--end of the footer content-wrapper-->
 
     <!--copyright-->
     <div class="copyright">
-        Copyright 2023 | Unplugged
+      <p>Copyright 2023 | Unplugged</p>
     </div>
 
-    <!--footer-->
   </footer>
+  <!--footer ends-->
+
 
   <!-- Add your site or application content here -->
 
