Attempt at unplugged retreat mobile first homepage

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&family=Roboto&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -172,7 +177,7 @@
         </h2>
 
         <!--reviews image-->
-
+         <img src="img/unplugged-retreat-lacrue.jpg" alt="lacrue team">
         <!--reviews section article-->
         <article>
           <div>
