--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="utf-8">
+
   <title>Unplugged Retreat</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <meta property="og:title" content="">
   <meta property="og:type" content="">
   <meta property="og:url" content="">
@@ -165,7 +169,8 @@
 
       </div> <!--end of the features content-wrapper-->
 
-    </section>
+    </section> <!--end of the features section-->
+    
 
     <!--reviews-->
     <section class="reviews">
