Attempt at unplugged retreat mobile first homepage3

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </a>
           </li>
           <li>
-            <a href="about/index.html" target="_blank" rel="noopener">About
+            <a href="about/index.html" target="_blank" rel="noopener">ABOUT
             </a>
           </li>
         </ul>
