--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Unplugged retreat</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
