Changed some padding across the site

--- a/about/index.html
+++ b/about/index.html
@@ -114,7 +114,7 @@
           <!--facilitator information-->
           <div>
             <h4>
-              chat with a facilitator
+              Chat with a Facilitator
             </h4>
 
             <address>
